contrast prob fixed 3rd

--- a/home_page.css
+++ b/home_page.css
@@ -44,5 +44,5 @@ li a {
 }
 .introofmetal {
     background-color: black;
-    width:auto;
+    width:500px;
 }
